09 Feb 2004 mipsator
 * rewritten pmkinstall to permit multiple directory creation.
 * updated pmkinstall man page.

08 Feb 2004 mipsator
 * implemented output filtering options in pmkpc.
 * updated pmkpc(1) to sync with actual state.
 * added support for multiple sources in pmkinstall.
 * added support for case when destination is a directory in pmkinstall.
 * fixed str_to_ulong() to use an unsigned long like said by the name.
 * replaced use of strtoul() by str_to_ulong() in pmkinstall.
 * fixed check_mode() in pmkinstall to behave as BSD install.

07 Feb 2004 mipsator
 * fixed building of the pmkscan location in usermode.
 * moved sample tests in samples/Makefile.
 * added document headers that were missing in some files.
 * imported a start of tutorial.

# snapshot 0.7.12a

07 Feb 2004 mreindl
 * fix braino that got introduced with the bcopy -> memmove switch in parse.c

# snapshot 0.7.12

05 Feb 2004 mipsator
 * converted pmk_set_parameter() to a wrapper.
 * added sub-functions for pmk_set_paremeter().
 * added system specific overriding support of compiler flags.

05 Feb 2004 mreindl
 * replaced getopts with getopt in pmkcfg.sh
 * added pkgsrc stuff for stable and snapshot
 * big STATUS updates, pmk tested on nearly every Unix out there with C-only
	support

04 Feb 2004 mipsator
 * improved process_string() to be recursive.
 * imported experimental shared lib support.

27 Jan 2004 mipsator
 * fixed wrong check of init_var().

26 Jan 2004 mipsator
 * fixed a bug in pmkpc that occurs when using non implemented option
	in pmkpc (noticed by xixi ;).

25 Jan 2004 mipsator
 * added support for --atleast-pkgconfig-version in pmkpc.
 * added man page for pmkpc.
 * added missing checks for hash_update* almost everywhere.
 * implemented --list-all in pmkpc.

25 Jan 2004 sourceforge
 * repaired developer cvs server

22 Jan 2004 sourceforge
 * broken developer cvs server

21 Jan 2004 xsa
 * added the --usage option in pmkpc.
 * added the --help option in pmkpc.
