@@ -65,6 +65,10 @@
 .Op Fl o Ar owner
 .Ar directory
 \&...
+.Nm pmkinstall
+.Fl v
+.Nm pmkinstall
+.Fl h
 
 .Sh DESCRIPTION
 The file(s) are copied to the target file or directory.
@@ -97,14 +101,11 @@ option is only included for backwards compatibility.
 .It Fl d
 Create directories.
 Missing parent directories are created as required.
-.\".It Fl f
-.\"Specify the target's file flags.
-.\"(See
-.\".Xr chflags 1
-.\"for a list of possible flags and their meanings.)
 .It Fl g
 Specify a group.
 A numeric GID is allowed.
+.It Fl h
+Display usage.
 .It Fl m
 Specify an alternate mode.
 The default mode is set to rwxr-xr-x (0755).
@@ -114,24 +115,6 @@ for a description of possible mode values.
 .It Fl o
 Specify an owner.
 A numeric UID is allowed.
-.\".It Fl p
-.\"Preserve the modification time.
-.\"Copy the file, as if the
-.\".Fl C
-.\"(compare and copy) option is specified,
-.\"except if the target file doesn't already exist or is different,
-.\"then preserve the modification time of the file.
-.\".It Fl S
-.\"Safe copy.
-.\"Normally,
-.\".Nm
-.\"unlinks an existing target before installing the new file.
-.\"With the
-.\".Fl S
-.\"flag a temporary file is used and then renamed to be
-.\"the target.
-.\"The reason this is safer is that if the copy or
-.\"rename fails, the existing target is left untouched.
 .It Fl s
 .Nm
 exec's the command of environment variable
@@ -141,24 +124,10 @@ number of systems and binary types.
 If the environment variable
 .Ev STRIP
 is not set, the action is skipped.
+.It Fl h
+Display version.
 .El
 
-.\".Pp
-.\"By default,
-.\".Nm
-.\"preserves all file flags, with the exception of the
-.\".Dq nodump
-.\"flag.
-.\"
-.\".Pp
-.\"The
-.\".Nm
-.\"utility attempts to prevent moving a file onto itself.
-.\".Pp
-.\"Installing
-.\".Pa /dev/null
-.\"creates an empty file.
-.\".Pp
 Upon successful completion a value of 0 is returned.
 Otherwise, a value >0 is returned.
 .Sh ENVIRONMENT
@@ -167,25 +136,8 @@ Otherwise, a value >0 is returned.
 Set which
 .Xr strip 1
 program to run.
-.\"Default is
-.\".Pa /usr/bin/strip .
 .El
-.\".Sh FILES
-.\".Bl -tag -width INS@XXXXXX -compact
-.\".It Pa INS@XXXXXX
-.\"If either
-.\".Fl S
-.\"option is specified, or the
-.\".Fl C
-.\"or
-.\".Fl p
-.\"option is used in conjunction with the
-.\".Fl s
-.\"option, temporary files named INS@XXXXXX,
-.\"where XXXXXX is decided by
-.\".Xr mkstemp 3 ,
-.\"are created in the target directory.
-.\".El
+
 .Sh SEE ALSO
 .Xr pmk 1 ,
 .Xr pmkscan 1 ,
